Fix #287 SimpleMDE behaves strangely on mobile

--- a/assets/css/general.css
+++ b/assets/css/general.css
@@ -61,7 +61,7 @@ textarea.form-control {
   resize: none;
   height: 70px;
 }
-textarea.simplemde-editor {
+textarea.easymde-editor {
   resize: vertical;
   height: 300px;
 }
